Fix horizontal scrollbar for too-wide filter menu

--- a/src/components/App/App.less
+++ b/src/components/App/App.less
@@ -4,7 +4,6 @@
 @import "../EditFilter/EditFilter.less";
 @import "../FilterList/FilterList.less";
 @import "../FilterListItem/FilterListItem.less";
-@import "../FilterHelp/FilterHelp.less";
 @import "../TaskList/TaskList.less";
 @import "../TaskListItem/TaskListItem.less";
 @import "../Auth/Auth.less";
@@ -14,7 +13,7 @@
 @import "../HiddenTaskListItem/HiddenTaskListItem.less";
 
 body {
-  background-color: #FffFFf;
+  background-color: #ffFFFF;
   min-height: 100vh;
 }
 
