--- a/src/components/TabbedNav/TabbedNav.less
+++ b/src/components/TabbedNav/TabbedNav.less
@@ -2,6 +2,16 @@
   padding-right: 5px;
 }
 
+.nav {
+  .select {
+    max-width: 337px;
+
+    select {
+      max-width: 100%;
+    }
+  }
+}
+
 nav#tabbed-nav.tabs.is-toggle {
   margin-bottom: 0;
   min-height: 0;
